packages/astro/e2e/fixtures/errors/src/pages/svelte-syntax-error.astro
---
import SvelteSyntaxError from '../components/SvelteSyntaxError.svelte';
---

<div>
  <SvelteSyntaxError />
</div>
